# shelves

./: .coverage  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  PLAN.md  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
docs/: Architecture.md  CLAUDE.md  DSL Specifications.md  Measure Design.md  Vision.md  architecture-diagram.md
docs/foundational/: Architecture.md  Chart DSL Specification.md  Dev Studio Design.md  KPI Specification.md  Layout DSL Specification.md  Multi Measure Design.md  Shelves Studio Design.md  Vision.md
docs/guide/: dashboards.md  dsl-reference.md  getting-started.md
scripts/: render_all_fixtures.py
shelves/: __init__.py
shelves/cli/: dev.py  render.py
shelves/compose/: __init__.py  dashboard.py
shelves/data/: bind.py  cube_client.py
shelves/models/: __init__.py  loader.py  resolver.py  schema.py
shelves/render/: to_html.py
shelves/schema/: CLAUDE.md  __init__.py  chart_schema.py  layout_schema.py
shelves/studio/: __init__.py  cli.py  server.py  terminal.py  watcher.py
shelves/studio/static/: index.html  styles.css
shelves/theme/: __init__.py  default_theme.yaml  merge.py
shelves/translator/: __init__.py  encodings.py  facet.py  filters.py  layout.py  layout_flatten.py  layout_solver.py  layout_styles.py  marks.py  sort.py  translate.py
shelves/translator/patterns/: layers.py  single.py  stacked.py
src/: __init__.py
src/cli/: dev.py  render.py
src/compose/: __init__.py  dashboard.py
src/data/: CLAUDE.md  bind.py  cube_client.py
src/models/: CLAUDE.md  __init__.py  loader.py  resolver.py
src/render/: to_html.py
src/schema/: CLAUDE.md  __init__.py  chart_schema.py  field_types.py  layout_schema.py
src/theme/: CLAUDE.md  __init__.py  default_theme.json  merge.py  theme_schema.py
src/translator/: CLAUDE.md  __init__.py  encodings.py  facet.py  filters.py  layout.py  layout_flatten.py  layout_solver.py  layout_styles.py  marks.py  sort.py  translate.py
src/translator/patterns/: layers.py  single.py  stacked.py
tests/: CLAUDE.md  conftest.py  test_auto_inject.py  test_cube_client.py  test_dashboard_compose.py  test_data_integration.py  test_dot_notation.py  test_facet.py  test_field_types.py  test_filters.py  test_layers.py  test_layout_flatten.py  test_layout_schema.py  test_layout_solver.py  test_layout_translator.py  test_marks.py  test_model_resolver.py  test_model_schema.py  test_model_translate.py  test_render.py  test_schema.py  test_stacked.py  test_studio_cli.py  test_studio_ws.py  test_theme.py  test_title.py  test_translator.py
tests/fixtures/data/: orders.json
tests/fixtures/layout/: compose_fit.yaml  compose_minimal.yaml  compose_multi.yaml  compose_predefined.yaml  compose_with_text.yaml  fit_sheets.yaml  kpi_dashboard.yaml  minimal.yaml  predefined_components.yaml  sidebar_dashboard.yaml
tests/fixtures/models/: cube_orders.yaml  empty_measures.yaml  invalid_name_mismatch.yaml  minimal.yaml  orders.yaml  temporal_explicit_grains.yaml
tests/fixtures/themes/: custom_brand.yaml
tests/fixtures/yaml/: auto_inject_default_sort.yaml  auto_inject_format_override.yaml  auto_inject_legend.yaml  auto_inject_sort_explicit.yaml  auto_inject_sort_order.yaml  auto_inject_stacked.yaml  auto_inject_title_override.yaml  auto_inject_tooltip.yaml  auto_inject_tooltip_override.yaml  cube_filtered.yaml  cube_sales_by_category.yaml  (+31 more)
(+8 files in other folders)
