[project]
name = "charter"
version = "0.1.0"
description = "AI-native declarative visual analytics — Chart DSL to Vega-Lite translator"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "respx>=0.21",
    "watchdog>=4.0",
]

[project.scripts]
charter-render = "src.cli.render:main"
charter-dev = "src.cli.dev:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
