[project]
name = "shelves-bi"
version = "0.1.0"
description = "AI-native declarative visual analytics — YAML DSL to Vega-Lite translator"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Varun Jain"}]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
studio = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "watchfiles>=1.0",
    "websockets>=14.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff==0.15.6",
    "respx>=0.21",
    "watchdog>=4.0",
    "pre-commit>=4.0",
    "pyright>=1.1",
    "build>=1.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/shelveshq/shelves"
Repository = "https://github.com/shelveshq/shelves"

[project.scripts]
shelves-render = "shelves.cli.render:main"
shelves-dev = "shelves.cli.dev:main"
shelves-studio = "shelves.studio.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=shelves --cov-report=term-missing --cov-fail-under=75"

[tool.setuptools.packages.find]
include = ["shelves*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]
"shelves.studio" = [
    "static/*.html",
    "static/*.css",
    "static/js/*.js",
]

[tool.setuptools.exclude-package-data]
"*" = ["CLAUDE.md"]

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
